--- a/.github/workflows/publish-extensions.yml
+++ b/.github/workflows/publish-extensions.yml
@@ -9,6 +9,7 @@ env:
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
   SEGMENT_WRITE_KEY: ${{ secrets.SEGMENT_WRITE_KEY }}
   WALLET_ENVIRONMENT: production
+  X_API_KEY: ${{ secrets.X_API_KEY }}
 
 jobs:
   pre-run:
