--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "3.9.0",
   "author": "Hiro Systems PBC",
   "scripts": {
-    "dev": "concurrently --raw 'node -r dotenv/config webpack/dev-server.js' 'redux-devtools --hostname=localhost --port=8000'",
+    "dev": "concurrently --raw 'node webpack/dev-server.js' 'redux-devtools --hostname=localhost --port=8000'",
     "dev:test-app": "webpack serve --config test-app/webpack/webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production EXT_ENV=prod webpack --config webpack/webpack.config.prod.js",
     "build:analyze": "cross-env ANALYZE=true NODE_ENV=production EXT_ENV=prod webpack --config webpack/webpack.config.prod.js",
@@ -99,19 +99,19 @@
     "@sentry/react": "6.16.1",
     "@sentry/tracing": "6.16.1",
     "@stacks/blockchain-api-client": "4.0.1",
-    "@stacks/common": "4.0.1",
-    "@stacks/connect": "6.7.0",
+    "@stacks/common": "4.1.0",
+    "@stacks/connect": "6.8.4",
     "@stacks/connect-ui": "5.5.0",
-    "@stacks/encryption": "4.0.1",
-    "@stacks/network": "4.0.1",
+    "@stacks/encryption": "4.1.0",
+    "@stacks/network": "4.1.0",
     "@stacks/rpc-client": "1.0.3",
-    "@stacks/storage": "4.0.1",
-    "@stacks/transactions": "4.0.1",
+    "@stacks/storage": "4.1.2",
+    "@stacks/transactions": "4.1.0",
     "@stacks/ui": "7.10.0",
     "@stacks/ui-core": "7.3.0",
     "@stacks/ui-theme": "7.5.0",
     "@stacks/ui-utils": "7.5.0",
-    "@stacks/wallet-sdk": "4.0.1",
+    "@stacks/wallet-sdk": "4.1.2",
     "@styled-system/theme-get": "5.1.2",
     "@tippyjs/react": "4.2.6",
     "@vkontakte/vk-qr": "2.0.13",
@@ -172,7 +172,7 @@
     "@emotion/cache": "11.7.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.4",
     "@schemastore/web-manifest": "0.0.5",
-    "@stacks/connect-react": "16.0.0",
+    "@stacks/connect-react": "17.0.4",
     "@stacks/eslint-config": "1.0.10",
     "@stacks/prettier-config": "0.0.10",
     "@stacks/stacks-blockchain-api-types": "0.65.0",
@@ -271,7 +271,9 @@
   "resolutions": {
     "**/**/prismjs": "1.27.0",
     "**/**/xmldom": "github:xmldom/xmldom#0.7.0",
-    "**/**/@stacks/network": "4.0.0",
+    "**/**/@stacks/common": "4.1.0",
+    "**/**/@stacks/network": "4.1.0",
+    "**/**/@stacks/transactions": "4.1.0",
     "@redux-devtools/cli/**/tar": "4.4.18",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
